# LeadFlow-AI

./: .env.example  .gitignore  README.md
backend/: README.md  __init__.py  app.py  config.py  pyproject.toml
backend/ai_engine/: README.md  __init__.py
backend/analytics/: README.md  __init__.py  analytics_models.py  dashboard_service.py  metrics_service.py  reporting_service.py
backend/api/: README.md  __init__.py  ai.py  analytics.py  business_context.py  customers.py  errors.py  followups.py  health.py  ingestion.py  leads.py  outreach.py  serializers.py  settings.py
backend/conversation_engine/: __init__.py
backend/crm_core/: README.md
backend/database/: README.md  __init__.py  base.py  extensions.py  session.py
backend/followups/: README.md  __init__.py
backend/integrations/: README.md  __init__.py
backend/lead_ingestion/: README.md  __init__.py
backend/outreach/: README.md  __init__.py
backend/scripts/: _validation.py  bootstrap.py  run_all_checks.py  test_analytics.py  test_api.py  test_conversation_flow.py  test_database.py  test_e2e.py  test_email_imap.py  test_email_smtp.py  test_journey.py  test_nim.py
backend/testsprite_tests/: TC001_get_all_leads_returns_leads_array.py  TC002_post_leads_creates_new_lead.py  TC003_put_leads_updates_existing_lead.py  TC004_patch_leads_status_updates_lead_status.py  TC005_patch_leads_stage_updates_lead_stage.py  TC006_get_leads_id_returns_error_for_nonexistent_lead.py  TC007_post_leads_returns_validation_error_for_missing_fields.py  TC008_get_leads_id_followups_returns_followup_tasks.py  standard_prd.json  (+5 more)
(+244 files in other folders)
